[gd_scene load_steps=31 format=3 uid="uid://5kgnw1ntb6cb"]

[ext_resource type="Script" uid="uid://brvxnwr4m7ch5" path="res://scripts/player/PlayerScript.gd" id="1_gifrc"]
[ext_resource type="Texture2D" uid="uid://d4ijcvb3qbod0" path="res://assets/player/Lancer.png" id="2_lcexw"]
[ext_resource type="Script" uid="uid://dif2glpb3xo01" path="res://scripts/player/PlayerStatus.gd" id="4_xq174"]
[ext_resource type="Resource" uid="uid://wx3b4l1wnrh3" path="res://status/player/PlayerStatus.tres" id="5_ps0ga"]
[ext_resource type="PackedScene" uid="uid://xxvsmf2f5kxl" path="res://scene/ui/player/PlayerHealthBar.tscn" id="6_xfkkd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bfo2a"]
atlas = ExtResource("2_lcexw")
region = Rect2(0, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_27cox"]
atlas = ExtResource("2_lcexw")
region = Rect2(100, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_80uhk"]
atlas = ExtResource("2_lcexw")
region = Rect2(200, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjtc1"]
atlas = ExtResource("2_lcexw")
region = Rect2(300, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oihod"]
atlas = ExtResource("2_lcexw")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjx6l"]
atlas = ExtResource("2_lcexw")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_obd1f"]
atlas = ExtResource("2_lcexw")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa8ox"]
atlas = ExtResource("2_lcexw")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq174"]
atlas = ExtResource("2_lcexw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps0ga"]
atlas = ExtResource("2_lcexw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfkkd"]
atlas = ExtResource("2_lcexw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_evkqd"]
atlas = ExtResource("2_lcexw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_36hba"]
atlas = ExtResource("2_lcexw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev7px"]
atlas = ExtResource("2_lcexw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkoe2"]
atlas = ExtResource("2_lcexw")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8llxl"]
atlas = ExtResource("2_lcexw")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vehwe"]
atlas = ExtResource("2_lcexw")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysx4d"]
atlas = ExtResource("2_lcexw")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_igdyw"]
atlas = ExtResource("2_lcexw")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtnn4"]
atlas = ExtResource("2_lcexw")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uts4u"]
atlas = ExtResource("2_lcexw")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_scyib"]
atlas = ExtResource("2_lcexw")
region = Rect2(700, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_oihod"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfo2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27cox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80uhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjtc1")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oihod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjx6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obd1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa8ox")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq174")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps0ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfkkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evkqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36hba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev7px")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkoe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8llxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vehwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysx4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igdyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtnn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uts4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scyib")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_evkqd"]
radius = 1.99999
height = 27.9999

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pjx6l"]
radius = 5.0
height = 28.0

[node name="MainPlayer" type="CharacterBody2D"]
script = ExtResource("1_gifrc")

[node name="LancerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oihod")
animation = &"death"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="DealDamage" type="Area2D" parent="." groups=["AreaDealDamage"]]

[node name="DealDamageCollision" type="CollisionShape2D" parent="DealDamage"]
position = Vector2(18, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_evkqd")
debug_color = Color(0.912271, 4.71681e-06, 6.73831e-07, 0.419608)

[node name="GroundCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_pjx6l")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
position_smoothing_speed = 8.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealthBar" parent="CanvasLayer" instance=ExtResource("6_xfkkd")]
position = Vector2(44, 37)

[node name="PlayerShowGold" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -261.0
offset_top = 40.0
offset_right = -29.0
offset_bottom = 63.0
grow_horizontal = 0
text = "GOLD: 10000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("4_xq174")
player_stats = ExtResource("5_ps0ga")

[connection signal="area_entered" from="DealDamage" to="." method="_on_deal_damage_area_entered"]
[connection signal="died" from="PlayerStats" to="." method="_on_player_stats_died"]
